[package]
name = "ircprobe"
description = "line-based IRC client"
version = "0.1.0"
edition = "2021"
authors = ["Liv <shadows_withal@fastmail.com>"]
license = "MIT"
repository = "https://github.com/badirc/ircprobe"
homepage = "https://github.com/badirc/ircprobe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "net"] }
rustyline-async = "0.3.1"
tokio-util = { version = "0.7.7", features = ["codec"] }
futures = "0.3.28"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
installers = ["shell", "powershell"]
